--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +15,32 @@
         android:theme="@style/Theme.Firebasestorage"
         tools:targetApi="31">
         <activity
+            android:name=".UpdateDetailsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_update_details"
+            android:theme="@style/Theme.Firebasestorage" />
+        <activity
+            android:name=".DetailsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_details"
+            android:theme="@style/Theme.Firebasestorage" />
+        <activity
+            android:name=".InsertActivity"
+            android:exported="false"
+            android:label="@string/title_activity_insert"
+            android:theme="@style/Theme.Firebasestorage" />
+        <activity
+            android:name=".Splashscreen"
+            android:exported="true"
+            android:label="Rento Apartments"
+            android:theme="@style/Theme.Firebasestorage">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".LocationActivity"
             android:exported="false"
             android:label="@string/title_activity_location"
@@ -20,13 +49,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Firebasestorage">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/Theme.Firebasestorage" />
     </application>
 
 </manifest>
