--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,9 @@ dependencies {
     implementation platform('androidx.compose:compose-bom:2023.03.00')
     implementation platform('androidx.compose:compose-bom:2023.03.00')
     implementation platform('androidx.compose:compose-bom:2023.03.00')
+    implementation platform('androidx.compose:compose-bom:2023.08.00')
+    implementation 'com.google.firebase:firebase-storage:20.3.0'
+    implementation platform('androidx.compose:compose-bom:2023.08.00')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -76,6 +79,8 @@ dependencies {
     androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
     androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
     androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.08.00')
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.08.00')
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
@@ -87,4 +92,11 @@ dependencies {
 
     //Lottie Dependency
     implementation("com.airbnb.android:lottie-compose:4.2.0")
+
+    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
+
+
+    implementation("com.google.firebase:firebase-storage-ktx:20.3.0")
+    implementation "io.github.kittinunf.fuel:fuel:2.3.1"
+    implementation "io.github.kittinunf.fuel:fuel-android:2.3.1"
 }
