--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Sep 06 09:05:13 EAT 2023
-sdk.dir=/home/emobilis/Android/Sdk
+#Tue Jan 16 11:00:48 EAT 2024
+sdk.dir=C\:\\Users\\eMobilis Marketing\\AppData\\Local\\Android\\Sdk
